force-app/main/default/objects/Attendee_Assignment_Detail__c/Attendee_Assignment_Detail__c.object-meta.xml
<CustomObject>
    <label>Attendee Assignment Detail</label>
    <pluralLabel>Attendee Assignment Details</pluralLabel>
    <nameField>
        <label>Detail Number</label>
        <displayFormat>AAD-{00000}</displayFormat>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
    <description
  >Individual line-item record for each OLI attendee assignment attempt</description>
</CustomObject>