force-app/main/default/objects/Attendee_Assignment_Detail__c/fields/Assigned_Contact__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Contact__c</fullName>
    <label>Assigned Contact</label>
    <type>Lookup</type>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Attendee Assignment Details</relationshipLabel>
    <relationshipName>Attendee_Assignment_Details</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>