force-app/main/default/objects/Attendee_Assignment_Detail__c/fields/Assignment_Error__c.field-meta.xml
<CustomField>
    <fullName>Assignment_Error__c</fullName>
    <label>Assignment Error</label>
    <type>TextArea</type>
</CustomField>