force-app/main/default/objects/Attendee_Assignment_Detail__c/fields/Assignment_Status__c.field-meta.xml
<CustomField>
    <fullName>Assignment_Status__c</fullName>
    <label>Assignment Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>Assigned</fullName><default>false</default><label
        >Assigned</label></value>
            <value><fullName>Skipped</fullName><default>false</default><label
        >Skipped</label></value>
            <value><fullName>Failed</fullName><default>false</default><label
        >Failed</label></value>
            <value><fullName>Created New</fullName><default
        >false</default><label>Created New</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>