force-app/main/default/objects/Attendee_Assignment_Detail__c/fields/Extracted_Email__c.field-meta.xml
<CustomField>
    <fullName>Extracted_Email__c</fullName>
    <label>Extracted Email</label>
    <type>Email</type>
</CustomField>