force-app/main/default/objects/Attendee_Assignment_Detail__c/fields/Extracted_Name__c.field-meta.xml
<CustomField>
    <fullName>Extracted_Name__c</fullName>
    <label>Extracted Name</label>
    <type>Text</type>
    <length>255</length>
</CustomField>