force-app/main/default/objects/Attendee_Assignment_Detail__c/fields/Extracted_Phone__c.field-meta.xml
<CustomField>
    <fullName>Extracted_Phone__c</fullName>
    <label>Extracted Phone</label>
    <type>Phone</type>
</CustomField>