force-app/main/default/objects/Attendee_Assignment_Detail__c/fields/Opportunity_Product__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Product__c</fullName>
    <label>Opportunity Product</label>
    <type>Lookup</type>
    <referenceTo>OpportunityLineItem</referenceTo>
    <relationshipLabel>Attendee Assignment Details</relationshipLabel>
    <relationshipName>Attendee_Assignment_Details</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>