force-app/main/default/objects/Attendee_Assignment_Detail__c/fields/Previous_Attendee_Email__c.field-meta.xml
<CustomField>
    <fullName>Previous_Attendee_Email__c</fullName>
    <label>Previous Attendee Email</label>
    <type>Email</type>
</CustomField>