force-app/main/default/objects/Attendee_Assignment_Detail__c/fields/Previous_Attendee_Name__c.field-meta.xml
<CustomField>
    <fullName>Previous_Attendee_Name__c</fullName>
    <label>Previous Attendee Name</label>
    <type>Text</type>
    <length>255</length>
</CustomField>