force-app/main/default/objects/Attendee_Assignment_Detail__c/fields/Previous_Contact__c.field-meta.xml
<CustomField>
    <fullName>Previous_Contact__c</fullName>
    <label>Previous Contact</label>
    <type>Lookup</type>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Previous Attendee Assignments</relationshipLabel>
    <relationshipName>Previous_Attendee_Assignments</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>