force-app/main/default/objects/Attendee_Assignment_Detail__c/fields/Processing_Log__c.field-meta.xml
<CustomField>
    <fullName>Processing_Log__c</fullName>
    <label>Processing Log</label>
    <type>MasterDetail</type>
    <referenceTo>Attendee_Processing_Log__c</referenceTo>
    <relationshipLabel>Assignment Details</relationshipLabel>
    <relationshipName>Assignment_Details</relationshipName>
    <relationshipOrder>0</relationshipOrder>
</CustomField>