force-app/main/default/objects/Attendee_Assignment_Detail__c/fields/Product_Name__c.field-meta.xml
<CustomField>
    <fullName>Product_Name__c</fullName>
    <label>Product Name</label>
    <type>Text</type>
    <length>255</length>
</CustomField>