force-app/main/default/objects/Attendee_Assignment_Detail__c/fields/Product_Type__c.field-meta.xml
<CustomField>
    <fullName>Product_Type__c</fullName>
    <label>Product Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>Appointment Taker</fullName><default
        >false</default><label>Appointment Taker</label></value>
            <value><fullName>Non-Appointment Taker</fullName><default
        >false</default><label>Non-Appointment Taker</label></value>
            <value><fullName>Marketer</fullName><default>false</default><label
        >Marketer</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>